--- a/VisualPassword.Android/.gitignore
+++ b/VisualPassword.Android/.gitignore
@@ -4,6 +4,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/deploymentTargetSelector.xml
 .DS_Store
 /build
 /captures
